--- a/src/frontend/MainWindow.axaml
+++ b/src/frontend/MainWindow.axaml
@@ -5,5 +5,5 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="textureFetcher.MainWindow"
         Title="textureFetcher">
-    Welcome to Avalonia!
+    Welcome to Avaloniaa!
 </Window>
