--- a/src/frontend/MainWindow.axaml
+++ b/src/frontend/MainWindow.axaml
@@ -1,9 +1,12 @@
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="textureFetcher.MainWindow"
-        Title="textureFetcher">
-    Welcome to Avaloniaa!
-</Window>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+    x:Class="textureFetcher.MainWindow"
+    Title="textureFetcher">
+    <StackPanel>
+        <TextBlock Name="texat" Margin="0 5" xml:space="preserve">
+</TextBlock>
+    </StackPanel>
+     </Window>
