--- a/src/TextureFetcher/frontend/App.axaml
+++ b/src/TextureFetcher/frontend/App.axaml
@@ -5,7 +5,8 @@
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available
     options. -->
     <Application.Styles>
-        <FluentTheme />
-        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+        <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
+        <StyleInclude Source="avares://Semi.Avalonia.ColorPicker/Index.axaml" />
+        <StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" />
     </Application.Styles>
 </Application>
